[gd_scene load_steps=22 format=3 uid="uid://dl5xum0nyrw0g"]

[ext_resource type="Texture2D" uid="uid://djhepobyn4f7m" path="res://MortalVessel/mortal.vessel.floor.tiles.png" id="1_owvgr"]
[ext_resource type="Texture2D" uid="uid://b73h4baq87vpq" path="res://MortalVessel/MortalVesselColorPallet-Sheet.png" id="2_mteid"]
[ext_resource type="PackedScene" uid="uid://i8q1ckj4r2ee" path="res://vessel_player.tscn" id="3_1apu6"]
[ext_resource type="Script" path="res://SCRIPTS/floor_endless_repeating.gd" id="3_bp4kg"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_juipg"]
[ext_resource type="Texture2D" uid="uid://ktm44bm76qr6" path="res://MortalVessel/mushroom.tree.large-Sheet.png" id="4_5brx8"]
[ext_resource type="Texture2D" uid="uid://r18gufim0in8" path="res://MortalVessel/mushroom.tree-Sheet.png" id="5_tg4aa"]
[ext_resource type="Texture2D" uid="uid://dur14ymwe47go" path="res://MortalVessel/curved.mushroom.tree-Sheet.png" id="6_byho7"]
[ext_resource type="PackedScene" uid="uid://bmxys2n7qi2nt" path="res://fungi_fiend.tscn" id="7_n76xg"]
[ext_resource type="PackedScene" uid="uid://lovqp5t8lm65" path="res://UI.tscn" id="9_h60h4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x58xa"]
texture = ExtResource("2_mteid")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o65n8"]
texture = ExtResource("4_5brx8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p1083"]
texture = ExtResource("5_tg4aa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q0ijk"]
texture = ExtResource("1_owvgr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_4ka4b"]
sources/1 = SubResource("TileSetAtlasSource_x58xa")
sources/2 = SubResource("TileSetAtlasSource_o65n8")
sources/3 = SubResource("TileSetAtlasSource_p1083")
sources/4 = SubResource("TileSetAtlasSource_q0ijk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aosq8"]
texture = ExtResource("4_5brx8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wi256"]
texture = ExtResource("5_tg4aa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s4nii"]
texture = ExtResource("6_byho7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_a0qi8"]
sources/0 = SubResource("TileSetAtlasSource_aosq8")
sources/1 = SubResource("TileSetAtlasSource_wi256")
sources/2 = SubResource("TileSetAtlasSource_s4nii")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d2eqn"]
texture = ExtResource("2_mteid")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_vlrf5"]
sources/0 = SubResource("TileSetAtlasSource_d2eqn")

[node name="GreenForestLevel1" type="Node2D"]
position = Vector2(-8, 0)

[node name="UI" parent="." instance=ExtResource("9_h60h4")]
unique_name_in_owner = true

[node name="Player_Vessel" parent="." instance=ExtResource("3_1apu6")]
position = Vector2(72, 168)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(77, 120)
zoom = Vector2(10, 10)
limit_left = -48
limit_right = 192
limit_smoothed = true
script = ExtResource("3_juipg")

[node name="fungiFiend" parent="." instance=ExtResource("7_n76xg")]
position = Vector2(72, 120)

[node name="floor" type="Node2D" parent="."]
position = Vector2(0, 16)
script = ExtResource("3_bp4kg")
ground_speed = 100
tree_speed = 60

[node name="green_forest_floor_copy" type="TileMap" parent="floor"]
unique_name_in_owner = true
position = Vector2(0, -256)
tile_set = SubResource("TileSet_4ka4b")
format = 2
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(0, 4, 4, 65536, 4, 4, 131072, 4, 3, 196608, 4, 3, 262144, 4, 4, 327680, 4, 3, 393216, 4, 3, 458752, 4, 3, 524288, 4, 4, 589824, 4, 3, 655360, 4, 3, 720896, 4, 4, 786432, 4, 4, 851968, 4, 4, 917504, 4, 3, 983040, 4, 3, 1, 4, 4, 65537, 4, 3, 131073, 4, 4, 196609, 4, 4, 262145, 4, 3, 327681, 4, 4, 393217, 4, 4, 458753, 4, 3, 524289, 4, 4, 589825, 4, 4, 655361, 4, 4, 720897, 4, 3, 786433, 4, 4, 851969, 4, 4, 917505, 4, 3, 983041, 4, 3, 2, 4, 0, 65538, 4, 0, 131074, 4, 1, 196610, 4, 1, 262146, 4, 0, 327682, 4, 0, 393218, 4, 0, 458754, 4, 1, 524290, 4, 2, 589826, 4, 1, 655362, 4, 1, 720898, 4, 0, 786434, 4, 1, 851970, 4, 0, 917506, 4, 2, 983042, 4, 2, 3, 4, 0, 65539, 4, 2, 131075, 4, 1, 196611, 4, 2, 262147, 4, 2, 327683, 4, 0, 393219, 4, 0, 458755, 4, 1, 524291, 4, 2, 589827, 4, 1, 655363, 4, 2, 720899, 4, 0, 786435, 4, 2, 851971, 4, 0, 917507, 4, 1, 983043, 4, 1, 4, 4, 2, 65540, 4, 1, 131076, 4, 0, 196612, 4, 0, 262148, 4, 1, 327684, 4, 2, 393220, 4, 2, 458756, 4, 1, 524292, 4, 2, 589828, 4, 1, 655364, 4, 0, 720900, 4, 0, 786436, 4, 0, 851972, 4, 0, 917508, 4, 2, 983044, 4, 1, 5, 4, 1, 65541, 4, 2, 131077, 4, 2, 196613, 4, 2, 262149, 4, 0, 327685, 4, 1, 393221, 4, 1, 458757, 4, 0, 524293, 4, 0, 589829, 4, 0, 655365, 4, 0, 720901, 4, 1, 786437, 4, 0, 851973, 4, 1, 917509, 4, 0, 983045, 4, 2, 6, 4, 1, 65542, 4, 1, 131078, 4, 2, 196614, 4, 2, 262150, 4, 2, 327686, 4, 1, 393222, 4, 1, 458758, 4, 2, 524294, 4, 1, 589830, 4, 0, 655366, 4, 0, 720902, 4, 0, 786438, 4, 0, 851974, 4, 2, 917510, 4, 1, 983046, 4, 1, 7, 4, 3, 65543, 4, 3, 131079, 4, 3, 196615, 4, 4, 262151, 4, 3, 327687, 4, 3, 393223, 4, 3, 458759, 4, 4, 524295, 4, 3, 589831, 4, 4, 655367, 4, 3, 720903, 4, 3, 786439, 4, 3, 851975, 4, 3, 917511, 4, 3, 983047, 4, 3, 8, 4, 3, 65544, 4, 3, 131080, 4, 3, 196616, 4, 3, 262152, 4, 3, 327688, 4, 4, 393224, 4, 4, 458760, 4, 4, 524296, 4, 4, 589832, 4, 4, 655368, 4, 4, 720904, 4, 4, 786440, 4, 3, 851976, 4, 3, 917512, 4, 3, 983048, 4, 3)

[node name="green_forest_floor" type="TileMap" parent="floor"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_4ka4b")
format = 2
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(0, 4, 4, 65536, 4, 4, 131072, 4, 3, 196608, 4, 3, 262144, 4, 4, 327680, 4, 3, 393216, 4, 3, 458752, 4, 3, 524288, 4, 4, 589824, 4, 3, 655360, 4, 3, 720896, 4, 4, 786432, 4, 4, 851968, 4, 4, 917504, 4, 3, 983040, 4, 3, 1, 4, 4, 65537, 4, 3, 131073, 4, 4, 196609, 4, 4, 262145, 4, 3, 327681, 4, 4, 393217, 4, 4, 458753, 4, 3, 524289, 4, 4, 589825, 4, 4, 655361, 4, 4, 720897, 4, 3, 786433, 4, 4, 851969, 4, 4, 917505, 4, 3, 983041, 4, 3, 2, 4, 0, 65538, 4, 0, 131074, 4, 1, 196610, 4, 1, 262146, 4, 0, 327682, 4, 0, 393218, 4, 0, 458754, 4, 1, 524290, 4, 2, 589826, 4, 1, 655362, 4, 1, 720898, 4, 0, 786434, 4, 1, 851970, 4, 0, 917506, 4, 2, 983042, 4, 2, 3, 4, 0, 65539, 4, 2, 131075, 4, 1, 196611, 4, 2, 262147, 4, 2, 327683, 4, 0, 393219, 4, 0, 458755, 4, 1, 524291, 4, 2, 589827, 4, 1, 655363, 4, 2, 720899, 4, 0, 786435, 4, 2, 851971, 4, 0, 917507, 4, 1, 983043, 4, 1, 4, 4, 2, 65540, 4, 1, 131076, 4, 0, 196612, 4, 0, 262148, 4, 1, 327684, 4, 2, 393220, 4, 2, 458756, 4, 1, 524292, 4, 2, 589828, 4, 1, 655364, 4, 0, 720900, 4, 0, 786436, 4, 0, 851972, 4, 0, 917508, 4, 2, 983044, 4, 1, 5, 4, 1, 65541, 4, 2, 131077, 4, 2, 196613, 4, 2, 262149, 4, 0, 327685, 4, 1, 393221, 4, 1, 458757, 4, 0, 524293, 4, 0, 589829, 4, 0, 655365, 4, 0, 720901, 4, 1, 786437, 4, 0, 851973, 4, 1, 917509, 4, 0, 983045, 4, 2, 6, 4, 1, 65542, 4, 1, 131078, 4, 2, 196614, 4, 2, 262150, 4, 2, 327686, 4, 1, 393222, 4, 1, 458758, 4, 2, 524294, 4, 1, 589830, 4, 0, 655366, 4, 0, 720902, 4, 0, 786438, 4, 0, 851974, 4, 2, 917510, 4, 1, 983046, 4, 1, 7, 4, 3, 65543, 4, 3, 131079, 4, 3, 196615, 4, 4, 262151, 4, 3, 327687, 4, 3, 393223, 4, 3, 458759, 4, 4, 524295, 4, 3, 589831, 4, 4, 655367, 4, 3, 720903, 4, 3, 786439, 4, 3, 851975, 4, 3, 917511, 4, 3, 983047, 4, 3, 8, 4, 3, 65544, 4, 3, 131080, 4, 3, 196616, 4, 3, 262152, 4, 3, 327688, 4, 4, 393224, 4, 4, 458760, 4, 4, 524296, 4, 4, 589832, 4, 4, 655368, 4, 4, 720904, 4, 4, 786440, 4, 3, 851976, 4, 3, 917512, 4, 3, 983048, 4, 3)

[node name="green_trees" type="TileMap" parent="floor"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_a0qi8")
format = 2
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(0, 2, 0, 65536, 1, 0, 131072, 0, 0, 196608, 0, 0, 262144, 2, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 2, 0, 786432, 0, 0, 851968, 1, 0, 917504, 1, 0, 983040, 0, 0, 1, 0, 0, 65537, 1, 0, 131073, 2, 0, 196609, 0, 0, 262145, 2, 0, 327681, 1, 0, 393217, 2, 0, 458753, 2, 0, 524289, 0, 0, 589825, 0, 0, 655361, 1, 0, 720897, 0, 0, 786433, 1, 0, 851969, 1, 0, 917505, 0, 0, 983041, 2, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 2, 0, 262151, 2, 0, 327687, 1, 0, 393223, 2, 0, 458759, 0, 0, 524295, 0, 0, 589831, 1, 0, 655367, 0, 0, 720903, 1, 0, 786439, 2, 0, 851975, 1, 0, 917511, 0, 0, 983047, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 2, 0, 262152, 2, 0, 327688, 1, 0, 393224, 1, 0, 458760, 2, 0, 524296, 1, 0, 589832, 2, 0, 655368, 1, 0, 720904, 0, 0, 786440, 1, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0)

[node name="green_trees_copy" type="TileMap" parent="floor"]
unique_name_in_owner = true
position = Vector2(0, -256)
tile_set = SubResource("TileSet_a0qi8")
format = 2
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(196608, 0, 0, 262144, 2, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 2, 0, 786432, 0, 0, 851968, 1, 0, 917504, 1, 0, 983040, 0, 0, 196609, 0, 0, 262145, 2, 0, 327681, 1, 0, 393217, 2, 0, 458753, 2, 0, 524289, 0, 0, 589825, 0, 0, 655361, 1, 0, 720897, 0, 0, 786433, 1, 0, 851969, 1, 0, 917505, 0, 0, 983041, 2, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 2, 0, 262151, 2, 0, 327687, 1, 0, 393223, 2, 0, 458759, 0, 0, 524295, 0, 0, 589831, 1, 0, 655367, 0, 0, 720903, 1, 0, 786439, 2, 0, 851975, 1, 0, 917511, 0, 0, 983047, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 2, 0, 262152, 2, 0, 327688, 1, 0, 393224, 1, 0, 458760, 2, 0, 524296, 1, 0, 589832, 2, 0, 655368, 1, 0, 720904, 0, 0, 786440, 1, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 0, 2, 0, 65536, 1, 0, 131072, 0, 0, 1, 0, 0, 65537, 1, 0, 131073, 2, 0)

[node name="dark_background" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vlrf5")
format = 2
layer_0/z_index = -20
layer_0/tile_data = PackedInt32Array(262141, 327680, 0, 327677, 327680, 0, 393213, 327680, 0, 458749, 327680, 0, 524285, 327680, 0, 589821, 327680, 0, 655357, 327680, 0, 720893, 327680, 0, 786429, 327680, 0, 851965, 327680, 0, 917501, 327680, 0, 262142, 327680, 0, 327678, 327680, 0, 393214, 327680, 0, 458750, 327680, 0, 524286, 327680, 0, 589822, 327680, 0, 655358, 327680, 0, 720894, 327680, 0, 786430, 327680, 0, 851966, 327680, 0, 917502, 327680, 0, 262143, 327680, 0, 327679, 327680, 0, 393215, 327680, 0, 458751, 327680, 0, 524287, 327680, 0, 589823, 327680, 0, 655359, 327680, 0, 720895, 327680, 0, 786431, 327680, 0, 851967, 327680, 0, 917503, 327680, 0, 196617, 327680, 0, 262153, 327680, 0, 327689, 327680, 0, 393225, 327680, 0, 458761, 327680, 0, 524297, 327680, 0, 589833, 327680, 0, 655369, 327680, 0, 720905, 327680, 0, 786441, 327680, 0, 851977, 327680, 0, 196618, 327680, 0, 262154, 327680, 0, 327690, 327680, 0, 393226, 327680, 0, 458762, 327680, 0, 524298, 327680, 0, 589834, 327680, 0, 655370, 327680, 0, 720906, 327680, 0, 786442, 327680, 0, 851978, 327680, 0, 196619, 327680, 0, 262155, 327680, 0, 327691, 327680, 0, 393227, 327680, 0, 458763, 327680, 0, 524299, 327680, 0, 589835, 327680, 0, 655371, 327680, 0, 720907, 327680, 0, 786443, 327680, 0, 851979, 327680, 0, 65531, 327680, 0, 131067, 327680, 0, 196603, 327680, 0, 262139, 327680, 0, 327675, 327680, 0, 393211, 327680, 0, 458747, 327680, 0, 524283, 327680, 0, 589819, 327680, 0, 655355, 327680, 0, 720891, 327680, 0, 786427, 327680, 0, 851963, 327680, 0, 917499, 327680, 0, 983035, 327680, 0, 1048571, 327680, 0, 1114107, 327680, 0, 65532, 327680, 0, 131068, 327680, 0, 196604, 327680, 0, 262140, 327680, 0, 327676, 327680, 0, 393212, 327680, 0, 458748, 327680, 0, 524284, 327680, 0, 589820, 327680, 0, 655356, 327680, 0, 720892, 327680, 0, 786428, 327680, 0, 851964, 327680, 0, 917500, 327680, 0, 983036, 327680, 0, 1048572, 327680, 0, 1114108, 327680, 0, 65533, 327680, 0, 131069, 327680, 0, 196605, 327680, 0, 983037, 327680, 0, 1048573, 327680, 0, 1114109, 327680, 0, 65534, 327680, 0, 131070, 327680, 0, 196606, 327680, 0, 983038, 327680, 0, 1048574, 327680, 0, 1114110, 327680, 0, 65535, 327680, 0, 131071, 327680, 0, 196607, 327680, 0, 983039, 327680, 0, 1048575, 327680, 0, 1114111, 327680, 0, 9, 327680, 0, 65545, 327680, 0, 131081, 327680, 0, 917513, 327680, 0, 983049, 327680, 0, 1048585, 327680, 0, 10, 327680, 0, 65546, 327680, 0, 131082, 327680, 0, 917514, 327680, 0, 983050, 327680, 0, 1048586, 327680, 0, 11, 327680, 0, 65547, 327680, 0, 131083, 327680, 0, 917515, 327680, 0, 983051, 327680, 0, 1048587, 327680, 0, 12, 327680, 0, 65548, 327680, 0, 131084, 327680, 0, 196620, 327680, 0, 262156, 327680, 0, 327692, 327680, 0, 393228, 327680, 0, 458764, 327680, 0, 524300, 327680, 0, 589836, 327680, 0, 655372, 327680, 0, 720908, 327680, 0, 786444, 327680, 0, 851980, 327680, 0, 917516, 327680, 0, 983052, 327680, 0, 1048588, 327680, 0, 13, 327680, 0, 65549, 327680, 0, 131085, 327680, 0, 196621, 327680, 0, 262157, 327680, 0, 327693, 327680, 0, 393229, 327680, 0, 458765, 327680, 0, 524301, 327680, 0, 589837, 327680, 0, 655373, 327680, 0, 720909, 327680, 0, 786445, 327680, 0, 851981, 327680, 0, 917517, 327680, 0, 983053, 327680, 0, 1048589, 327680, 0, 1048576, 327680, 0, 1048577, 327680, 0, 1048578, 327680, 0, 1048579, 327680, 0, 1048580, 327680, 0, 1048581, 327680, 0, 1048582, 327680, 0, 1048583, 327680, 0, 1048584, 327680, 0, 1179643, 327680, 0, 1245179, 327680, 0, 1179644, 327680, 0, 1245180, 327680, 0, 1179645, 327680, 0, 1245181, 327680, 0, 1179646, 327680, 0, 1245182, 327680, 0, 1179647, 327680, 0, 1245183, 327680, 0, 1114112, 327680, 0, 1179648, 327680, 0, 1114113, 327680, 0, 1179649, 327680, 0, 1114114, 327680, 0, 1179650, 327680, 0, 1114115, 327680, 0, 1179651, 327680, 0, 1114116, 327680, 0, 1179652, 327680, 0, 1114117, 327680, 0, 1179653, 327680, 0, 1114118, 327680, 0, 1179654, 327680, 0, 1114119, 327680, 0, 1179655, 327680, 0, 1114120, 327680, 0, 1179656, 327680, 0, 1114121, 327680, 0, 1179657, 327680, 0, 1114122, 327680, 0, 1179658, 327680, 0, 1114123, 327680, 0, 1179659, 327680, 0, 1114124, 327680, 0, 1179660, 327680, 0, 1114125, 327680, 0, 1179661, 327680, 0)
